<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="top"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/resultField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/operationField"/>
    <!-- поле знака операции -->
    <TextView
        android:id="@+id/operationField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/resultField"
        />
    <!-- поле ввода чисел -->
    <EditText
        android:id="@+id/numberField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/resultField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/firstButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="start">

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_1"
            android:layout_weight="1"
            android:textSize="25sp"
            android:onClick="onNumberClick"/>
        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_2"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:onClick="onNumberClick"/>
        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_3"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:onClick="onNumberClick"/>
        <Button
            android:id="@+id/addition"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_addition"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:onClick="onOperationClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="start">

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_4"
            android:layout_weight="1"
            android:textSize="25sp"
            android:onClick="onNumberClick"/>
        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_5"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:onClick="onNumberClick"/>
        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_6"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:onClick="onNumberClick"/>
        <Button
            android:id="@+id/subtraction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_subtraction"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:onClick="onOperationClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="start">

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_7"
            android:layout_weight="1"
            android:textSize="25sp"
            android:onClick="onNumberClick"/>
        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_8"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:onClick="onNumberClick"/>
        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_9"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:onClick="onNumberClick"/>
        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_multiply"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:onClick="onOperationClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forthButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="start">

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_clear"
            android:layout_weight="1"
            android:textSize="16sp"
            android:onClick="onOperationClick"/>
        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_0"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:onClick="onNumberClick"/>
        <Button
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_equals"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:onClick="onOperationClick"/>
        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_division"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:onClick="onOperationClick"/>
    </LinearLayout>

</LinearLayout>